--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  english_words: ^4.0.0-0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
