--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -23,8 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
   http: ^0.13.3
+  # cupertino_icons: ^1.0.2
+  # flutter_markdown: ^0.6.2
 
 dev_dependencies:
   flutter_test:
