--- a/srv/Cargo.toml
+++ b/srv/Cargo.toml
@@ -9,6 +9,7 @@ path = "bin/srv.rs"
 
 [dependencies]
 tokio = { version = "1.0.2", features = ["full"] }
+regex = "1"
 anyhow = "1.0.38"
 tracing = "0.1"
 tracing-subscriber = "0.2"
@@ -25,3 +26,4 @@ serde_json = "1.0"
 serde = { version = "1.0.120", features = ["rc", "derive"] }
 nanoid = "0.4.0"
 shellexpand = "2.1.0"
+lazy_static = "1.4.0"
