--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.3
+  google_fonts: ^2.1.0
+  intl: ^0.17.0
+  provider: ^5.0.0
   # cupertino_icons: ^1.0.2
   # flutter_markdown: ^0.6.2
 
