--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   google_fonts: ^2.1.0
   intl: ^0.17.0
   provider: ^5.0.0
+  hovering: ^1.0.4
   # cupertino_icons: ^1.0.2
   # flutter_markdown: ^0.6.2
 
