--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   intl: ^0.17.0
   provider: ^5.0.0
   hovering: ^1.0.4
+  # desktop_window: ^0.4.0
   # cupertino_icons: ^1.0.2
   # flutter_markdown: ^0.6.2
 
