WIP conect to firestore

--- a/srv/Cargo.toml
+++ b/srv/Cargo.toml
@@ -12,10 +12,6 @@ name = "convert"
 path = "bin/convert.rs"
 
 [[bin]]
-name = "sync"
-path = "bin/sync.rs"
-
-[[bin]]
 name = "force_resync"
 path = "bin/force_resync.rs"
 
@@ -40,8 +36,11 @@ serde = { version = "1.0.120", features = ["rc", "derive"] }
 nanoid = "0.4.0"
 shellexpand = "2.1.0"
 lazy_static = "1.4.0"
-firestore_grpc = "0.31"
+tonic = { version = "0.4", features = ["tls", "tls-roots"] }
+prost = "0.7"
+prost-types = "0.7"
 
 [build-dependencies]
 cbindgen = "0.19"
 dart-bindgen = "0.1.8"
+tonic-build = "0.4"
